--- a/data/data_processing/data_processing.ipynb
+++ b/data/data_processing/data_processing.ipynb
@@ -9,7 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy test input files from raw data folders to processed data folders\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "source_folder = \"../raw/full/firebase_texmeshes-10000x100\"\n",
+    "destination_folder = \"../processed/full/test/x\"\n",
+    "\n",
+    "file_list = os.listdir(source_folder)\n",
+    "\n",
+    "for file_name in file_list:\n",
+    "    if (not file_name.endswith(\"_ply.jpg\")) and file_name.endswith(\".jpg\"):\n",
+    "        source_file = os.path.join(source_folder, file_name)\n",
+    "        destination_file = os.path.join(destination_folder, file_name)\n",
+    "        shutil.copy(source_file, destination_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +62,8 @@
     "import os\n",
     "import shutil\n",
     "\n",
-    "source_folder = \"../raw/full/firebase_texmeshes-10000x100\"\n",
-    "destination_folder = \"../processed/full/test/x\"\n",
+    "source_folder = \"../raw/full/firebase_texmeshes-0x3000\"\n",
+    "destination_folder = \"../processed/full/train/x\"\n",
     "\n",
     "file_list = os.listdir(source_folder)\n",
     "\n",
@@ -50,6 +72,45 @@
     "        source_file = os.path.join(source_folder, file_name)\n",
     "        destination_file = os.path.join(destination_folder, file_name)\n",
     "        shutil.copy(source_file, destination_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy test label files from raw data folders to processed data folders\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "source_folder = \"../raw/full/firebase_texmeshes-0x3000\"\n",
+    "destination_folder = \"../processed/full/train/y\"\n",
+    "\n",
+    "file_list = os.listdir(source_folder)\n",
+    "\n",
+    "for file_name in file_list:\n",
+    "    if file_name.endswith(\"_ply.jpg\"):\n",
+    "        new_file_name = file_name.replace(\"_ply\", \"\")\n",
+    "        source_file = os.path.join(source_folder, file_name)\n",
+    "        destination_file = os.path.join(destination_folder, new_file_name)\n",
+    "        shutil.copy(source_file, destination_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Augmentation and Pre-Processing (TODO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: data augmentation and preprocessing"
    ]
   }
  ],
