working training script for UNet Model
deactivated early stopping to try to overfit to small dataset for testing

--- a/data/data_processing/data_processing.ipynb
+++ b/data/data_processing/data_processing.ipynb
@@ -8,6 +8,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Small"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy test input files from raw data folders to processed data folders\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "source_folder = \"../raw/small_test\"\n",
+    "destination_folder = \"../processed/small/x\"\n",
+    "\n",
+    "file_list = os.listdir(source_folder)\n",
+    "\n",
+    "for file_name in file_list:\n",
+    "    if (not file_name.endswith(\"_ply.jpg\")) and file_name.endswith(\".jpg\"):\n",
+    "        source_file = os.path.join(source_folder, file_name)\n",
+    "        destination_file = os.path.join(destination_folder, file_name)\n",
+    "        shutil.copy(source_file, destination_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy test label files from raw data folders to processed data folders\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "source_folder = \"../raw/small_test\"\n",
+    "destination_folder = \"../processed/small/y\"\n",
+    "\n",
+    "file_list = os.listdir(source_folder)\n",
+    "\n",
+    "for file_name in file_list:\n",
+    "    if file_name.endswith(\"_ply.jpg\"):\n",
+    "        new_file_name = file_name.replace(\"_ply\", \"\")\n",
+    "        source_file = os.path.join(source_folder, file_name)\n",
+    "        destination_file = os.path.join(destination_folder, new_file_name)\n",
+    "        shutil.copy(source_file, destination_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Full"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
